--- a/subgraphs/badger-dao/package.json
+++ b/subgraphs/badger-dao/package.json
@@ -8,6 +8,9 @@
     "prepare:xdai": "mustache config/xdai.json subgraph.template.yaml > subgraph.yaml",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ antonyip/badger_community_subgraph6",
+    "deploy5": "graph deploy --node https://api.thegraph.com/deploy/ antonyip/badger_community_subgraph5",
+    "deploy4": "graph deploy --node https://api.thegraph.com/deploy/ antonyip/badger_community_subgraph4",
     "deploy:mainnet": "graph deploy --studio badger-dao",
     "deploy:matic": "graph deploy --node https://api.thegraph.com/deploy/ axejintao/badger-dao-polygon",
     "deploy:xdai": "graph deploy --node https://api.thegraph.com/deploy/ axejintao/badger-dao-xdai",
@@ -16,24 +19,13 @@
     "create-local": "graph create --node http://localhost:8020/ axejintao/badger-dao",
     "remove-local": "graph remove --node http://localhost:8020/ axejintao/badger-dao",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 axejintao/badger-dao",
-    "format": "yarn run lint --fix",
-    "lint": "eslint ."
+    "format": "cd ../.. && yarn && yarn run lint --fix"
   },
   "dependencies": {
     "@graphprotocol/graph-ts": "^0.20.1"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.21.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.1.5",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-simple-import-sort": "7.0.0",
-    "mustache": "^4.2.0",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "mustache": "^4.2.0"
   }
 }
