--- a/subgraphs/tree-rewards/subgraph.yaml
+++ b/subgraphs/tree-rewards/subgraph.yaml
@@ -324,6 +324,30 @@ dataSources:
           handler: handleTreeDistribution
       file: ./src/mapping.ts
 
+  - kind: ethereum/contract
+    name: harvestBbCvx
+    network: mainnet
+    source:
+      address: '0x3406402caE1f745714a9aFFc45939854e7Fbe12B'
+      abi: StrategyConvexStakingOptimizer
+      startBlock: 13180313
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - TreeDistribution
+        - Token
+      abis:
+        - name: StrategyConvexStakingOptimizer
+          file: ./abis/StrategyConvexStakingOptimizer.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: TreeDistribution(indexed address,uint256,indexed uint256,uint256)
+          handler: handleTreeDistribution
+      file: ./src/mapping.ts
+
   # ===== Wrappers =====
   - kind: ethereum/contract
     name: SimpleWrapperGatedUpgradeable
