--- a/subgraphs/tree-rewards-arbitrum/subgraph.yaml
+++ b/subgraphs/tree-rewards-arbitrum/subgraph.yaml
@@ -2,7 +2,6 @@ specVersion: 0.0.3
 schema:
   file: ./schema.graphql
 dataSources:
-
   - kind: ethereum/contract
     name: sushiWbtcWethLP
     network: arbitrum-one
@@ -31,6 +30,30 @@ dataSources:
     network: arbitrum-one
     source:
       address: '0x4C5d19Da5EaeC298B79879a5f7481bEDE055F4F8'
+      abi: StrategySushiBadgerIbBTC
+      startBlock: 310262
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - TreeDistribution
+        - Token
+      abis:
+        - name: StrategySushiBadgerIbBTC
+          file: ./abis/StrategySushiBadgerIbBTC.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: TreeDistribution(indexed address,uint256,indexed uint256,uint256)
+          handler: handleTreeDistribution
+      file: ./src/mapping.ts
+
+  - kind: ethereum/contract
+    name: harvestTricrypto
+    network: arbitrum-one
+    source:
+      address: '0xE83A790fC3B7132fb8d7f8d438Bc5139995BF5f4'
       abi: StrategySushiBadgerIbBTC
       startBlock: 310262
     mapping:
