--- a/subgraphs/tree-rewards-arbitrum/subgraph.yaml
+++ b/subgraphs/tree-rewards-arbitrum/subgraph.yaml
@@ -72,6 +72,29 @@ dataSources:
         - event: TreeDistribution(indexed address,uint256,indexed uint256,uint256)
           handler: handleTreeDistribution
       file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: harvestTricryptoLite
+    network: arbitrum-one
+    source:
+      address: '0x9a28eeFB2c5F8311f37c39314D78Be85C54B5da6'
+      abi: StrategySushiBadgerIbBTC
+      startBlock: 310262
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - TreeDistribution
+        - Token
+      abis:
+        - name: StrategySushiBadgerIbBTC
+          file: ./abis/StrategySushiBadgerIbBTC.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: TreeDistribution(indexed address,uint256,indexed uint256,uint256)
+          handler: handleTreeDistribution
+      file: ./src/mapping.ts
 # ===== Strategy Template =====
 templates:
   - name: Strategy
