--- a/subgraphs/tokens/package.json
+++ b/subgraphs/tokens/package.json
@@ -2,15 +2,15 @@
   "name": "tokens",
   "license": "MIT",
   "version": "v1.0.0",
-  "author": "BadgerDAO",
+  "author": "badger-finance",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "create-local": "graph create --node http://localhost:8020/ badgerdao/badger-dao-tokens",
-    "remove-local": "graph remove --node http://localhost:8020/ badgerdao/badger-dao-tokens",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 badgerdao/badger-dao-tokens",
+    "create-local": "graph create --node http://localhost:8020/ badger-finance/badger-dao-tokens",
+    "remove-local": "graph remove --node http://localhost:8020/ badger-finance/badger-dao-tokens",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 badger-finance/badger-dao-tokens",
     
     "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:bsc": "mustache config/bsc.json subgraph.template.yaml > subgraph.yaml",
@@ -20,8 +20,8 @@
 
     "deploy-studio:mainnet": "graph deploy --studio badger-dao-tokens",
 
-    "deploy:mainnet": "graph deploy --product hosted-service badgerdao/badger-dao-tokens",
-    "deploy:matic": "graph deploy --product hosted-service badgerdao/badger-dao-tokens-polygon",
-    "deploy:arbitrum": "graph deploy --product hosted-service badgerdao/badger-dao-tokens-arbitrum"
+    "deploy:mainnet": "graph deploy --product hosted-service badger-finance/badger-dao-tokens",
+    "deploy:matic": "graph deploy --product hosted-service badger-finance/badger-dao-tokens-polygon",
+    "deploy:arbitrum": "graph deploy --product hosted-service badger-finance/badger-dao-tokens-arbitrum"
   }
 }
