--- a/subgraphs/tokens/subgraph.yaml
+++ b/subgraphs/tokens/subgraph.yaml
@@ -46,3 +46,24 @@ templates:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
       file: ./src/handlers/transfer-handler.ts
+  - kind: ethereum/contract
+    name: UFragments
+    network: arbitrum-one
+    source:
+      abi: UFragments
+    mapping:
+      kind: ethereum/events
+      language: wasm/assemblyscript
+      apiVersion: 0.0.4
+      entities:
+        - TokenBalance
+        - Token
+      abis:
+        - name: UFragments
+          file: ./abis/UFragments.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/handlers/digg-transfer-handler.ts
