--- a/subgraphs/tokens/subgraph.yaml
+++ b/subgraphs/tokens/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Badger
-    network: arbitrum-one
+    network: mainnet
     source:
-      address: "0xBfa641051Ba0a0Ad1b0AcF549a89536A0D76472E"
+      address: "0x3472A5A71965499acd81997a54BBA8D852C6E53d"
       abi: ERC20
-      startBlock: 226071
+      startBlock: 11348423
     mapping:
       kind: ethereum/events
       language: wasm/assemblyscript
@@ -25,11 +25,55 @@ dataSources:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
       file: ./src/handlers/transfer-handler.ts
+  - kind: ethereum/contract
+    name: ibBTC
+    network: mainnet
+    source:
+      address: "0xc4E15973E6fF2A35cC804c2CF9D2a1b817a8b40F"
+      abi: ERC20
+      startBlock: 12342123
+    mapping:
+      kind: ethereum/events
+      language: wasm/assemblyscript
+      apiVersion: 0.0.4
+      entities:
+        - TokenBalance
+        - Token
+      abis:
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/handlers/transfer-handler.ts
+  - kind: ethereum/contract
+    name: Digg
+    network: mainnet
+    source:
+      address: "0x798D1bE841a82a273720CE31c822C61a67a601C3"
+      abi: UFragments
+      startBlock: 11668293
+    mapping:
+      kind: ethereum/events
+      language: wasm/assemblyscript
+      apiVersion: 0.0.4
+      entities:
+        - TokenBalance
+        - Token
+      abis:
+        - name: UFragments
+          file: ./abis/UFragments.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/handlers/digg-transfer-handler.ts
 
 templates:
   - kind: ethereum/contract
     name: Token
-    network: arbitrum-one
+    network: mainnet
     source:
       abi: ERC20
     mapping:
@@ -48,7 +92,7 @@ templates:
       file: ./src/handlers/transfer-handler.ts
   - kind: ethereum/contract
     name: UFragments
-    network: arbitrum-one
+    network: mainnet
     source:
       abi: UFragments
     mapping:
