feat: add avalanche subgraph

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "build": "yarn workspaces run build",
     "codegen": "yarn workspaces run codegen",
     "prepare:mainnet": "yarn workspaces run prepare:mainnet",
+    "prepare:avalanche": "yarn workspaces run prepare:avalanche",
     "prepare:matic": "yarn workspaces run prepare:matic",
     "prepare:arbitrum": "yarn workspaces run prepare:arbitrum",
     "prepare:bsc": "yarn workspaces run prepare:bsc",
     "prepare:xdai": "yarn workspaces run prepare:xdai",
     "deploy-studio:mainnet": "yarn workspaces run deploy-studio:mainnet",
     "deploy:mainnet": "yarn workspaces run deploy:mainnet",
+    "deploy:avalanche": "yarn workspaces run deploy:avalanche",
     "deploy:matic": "yarn workspaces run deploy:matic",
     "deploy:arbitrum": "yarn workspaces run deploy:arbitrum",
     "deploy:bsc": "yarn workspaces run deploy:bsc",
