chore: add fantom support

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "yarn workspaces run build",
     "codegen": "yarn workspaces run codegen",
     "prepare:mainnet": "yarn workspaces run prepare:mainnet",
+    "prepare:fantom": "yarn workspaces run prepare:fantom",
     "prepare:avalanche": "yarn workspaces run prepare:avalanche",
     "prepare:matic": "yarn workspaces run prepare:matic",
     "prepare:arbitrum": "yarn workspaces run prepare:arbitrum",
@@ -18,6 +19,7 @@
     "prepare:xdai": "yarn workspaces run prepare:xdai",
     "deploy-studio:mainnet": "yarn workspaces run deploy-studio:mainnet",
     "deploy:mainnet": "yarn workspaces run deploy:mainnet",
+    "deploy:fantom": "yarn workspaces run deploy:fantom",
     "deploy:avalanche": "yarn workspaces run deploy:avalanche",
     "deploy:matic": "yarn workspaces run deploy:matic",
     "deploy:arbitrum": "yarn workspaces run deploy:arbitrum",
