chore: add ftm token subgraph

--- a/src/tokens/package.json
+++ b/src/tokens/package.json
@@ -18,11 +18,13 @@
     "prepare:matic": "mustache config/matic.json subgraph.template.yaml > subgraph.yaml",
     "prepare:xdai": "mustache config/xdai.json subgraph.template.yaml > subgraph.yaml",
     "prepare:arbitrum": "mustache config/arbitrum.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:fantom": "mustache config/fantom.json subgraph.template.yaml > subgraph.yaml",
 
     "deploy-studio:mainnet": "graph deploy --studio badger-dao-tokens",
 
     "deploy:mainnet": "graph deploy --product hosted-service badger-finance/badger-dao-tokens",
     "deploy:matic": "graph deploy --product hosted-service badger-finance/badger-dao-tokens-polygon",
-    "deploy:arbitrum": "graph deploy --product hosted-service badger-finance/badger-dao-tokens-arbitrum"
+    "deploy:arbitrum": "graph deploy --product hosted-service badger-finance/badger-dao-tokens-arbitrum",
+    "deploy:fantom": "graph deploy --product hosted-service badger-finance/badger-dao-tokens-fantom"
   }
 }
