--- a/src/badger-nfts/package.json
+++ b/src/badger-nfts/package.json
@@ -2,23 +2,19 @@
   "name": "badger-nfts",
   "version": "0.1.0",
   "scripts": {
-    "build-contract": "solc contracts/Gravity.sol --abi -o abis --overwrite && solc contracts/Gravity.sol --bin -o bin --overwrite",
-    "create": "graph create darruma/badger-nfts --node https://api.thegraph.com/deploy/",
-    "create-local": "graph create darruma/badger-nfts --node http://127.0.0.1:8020",
+    "create": "graph create badger-finance/badger-nfts --node https://api.thegraph.com/deploy/",
+    "create-local": "graph create badger-finance/badger-nfts --node http://127.0.0.1:8020",
+
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy darruma/badger-nfts --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "deploy-local": "graph deploy darruma/badger-nfts --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
+
+    "prepare:mainnet": "echo 'no preparation configured'",
+
+    "deploy": "graph deploy --product hosted-service badger-finance/badger-nfts",
+    "deploy-local": "graph deploy badger-finance/badger-nfts --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.20.0",
     "@graphprotocol/graph-ts": "^0.20.0"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0",
-    "truffle": "^5.0.4",
-    "truffle-contract": "^4.0.5",
-    "truffle-hdwallet-provider": "^1.0.4"
   }
 }
