--- a/src/badger-across/package.json
+++ b/src/badger-across/package.json
@@ -1,16 +1,20 @@
 {
   "name": "badger-across",
-  "license": "UNLICENSED",
+  "version": "0.1.0",
   "scripts": {
+    "create": "graph create badger-finance/badger-across --node https://api.thegraph.com/deploy/",
+    "create-local": "graph create badger-finance/badger-across --node http://127.0.0.1:8020",
+
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ darruma/badger-across",
-    "create-local": "graph create --node http://localhost:8020/ darruma/badger-across",
-    "remove-local": "graph remove --node http://localhost:8020/ darruma/badger-across",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 darruma/badger-across"
+
+    "prepare:mainnet": "echo 'no preparation configured'",
+
+    "deploy": "graph deploy --product hosted-service badger-finance/badger-across",
+    "deploy-local": "graph deploy badger-finance/badger-across --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
-  "dependencies": {
-    "@graphprotocol/graph-cli": "0.21.0",
-    "@graphprotocol/graph-ts": "0.20.0"
+  "devDependencies": {
+    "@graphprotocol/graph-cli": "^0.20.0",
+    "@graphprotocol/graph-ts": "^0.20.0"
   }
-}
+} 
