feat: add subgraph templates for new subgraphs

--- a/src/fuse-subgraph/package.json
+++ b/src/fuse-subgraph/package.json
@@ -13,7 +13,7 @@
     "codegen": "graph codegen --output-dir src/types/",
     "build": "graph build",
 
-    "prepare:mainnet": "echo 'no preparation configured'",
+    "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
 
     "deploy": "graph deploy --product hosted-service badger-finance/fuse-subgraph",
     "deploy-local": "graph deploy badger-finance/fuse-subgraph --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
