--- a/src/badger-nfts/subgraph.template.yaml
+++ b/src/badger-nfts/subgraph.template.yaml
@@ -4,13 +4,14 @@ repository: https://github.com/Badger-Finance/badger-subgraph/tree/master/src/ba
 schema:
   file: ./schema.graphql
 dataSources:
+  {{#badgerNfts}}
   - kind: ethereum/contract
-    name: BadgerERC1155
-    network: mainnet
+    name: {{ name }}
+    network: {{ chain }}
     source:
-      address: '0xe1e546e25A5eD890DFf8b8D005537c0d373497F8'
+      address: '{{ address }}'
       abi: BadgerERC1155
-      startBlock: 10734502
+      startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -24,33 +25,15 @@ dataSources:
         - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
           handler: handleNFTTransfer
       file: ./src/mapping.ts
+  {{/badgerNfts}}
+  {{#memeNfts}}
   - kind: ethereum/contract
-    name: Proxy
-    network: mainnet
+    name: {{ name }}
+    network: {{ chain }}
     source:
-      address: '0x576cD258835C529B54722F84Bb7d4170aA932C64'
-      abi: BadgerERC1155
-      startBlock: 10734502
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.4
-      language: wasm/assemblyscript
-      entities:
-        - NFT
-      abis:
-        - name: BadgerERC1155
-          file: ./abis/BadgerERC1155.json
-      eventHandlers:
-        - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
-          handler: handleNFTTransfer
-      file: ./src/mapping.ts
-  - kind: ethereum/contract
-    name: MemeLtd
-    network: mainnet
-    source:
-      address: '0xe4605d46Fd0B3f8329d936a8b258D69276cBa264'
+      address: '{{ address }}'
       abi: MemeLtd
-      startBlock: 10734502
+      startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -64,11 +47,12 @@ dataSources:
         - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
           handler: handleMemeNFTTransfer
       file: ./src/mapping.ts
+  {{/memeNfts}}
 
 templates:
   - kind: ethereum/contract
     name: BadgerERC1155
-    network: mainnet
+    network: {{ chain }}
     source:
       abi: BadgerERC1155
     mapping:
@@ -86,7 +70,7 @@ templates:
       file: ./src/mapping.ts
   - kind: ethereum/contract
     name: MemeLtd
-    network: mainnet
+    network: {{ chain }}
     source:
       abi: MemeLtd
     mapping:
